# othello

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  computer.c  computer.c.orig  computer.h  computer.hh  gameboard.c  gameboard.c.orig  gameboard.h  gameboard.h.orig  gameboard.hh  gameboard_demo.c  gameboard_demo.c.orig  logic.c  logic.c.orig  logic.h  logic.hh  othello.c  othello.c.orig  othello_tests.cc  othello_tests.cc.orig  player.c  player.c.orig  player.h  player.h.orig  player.hh  utility.c  utility.c.orig  utility.h  utility.hh
reports/: report-November1.md  report-November15.md  report-November8.md  report-October17.md  report-October17.md.orig  report-October25.md
